tests/ui/concurrent_state_machine_empty_rule_args.stderr
error: #[rule(...)] requires `group = "..."`
 --> tests/ui/concurrent_state_machine_empty_rule_args.rs:8:5
  |
8 |     #[rule()]
  |     ^^^^^^^^^
